--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"REPO_CREATED","testStatus":1,"submitStatus":0,"currentTestResult":true,"workingDirectory":"C:\\Users\\Vinod Kumar Kakarla\\MissionRnDProjects\\strings2"}
+{"gitStatus":"REPO_CREATED","testStatus":1,"submitStatus":0,"currentTestResult":false,"workingDirectory":"C:\\Users\\Vinod Kumar Kakarla\\MissionRnDProjects\\strings2"}
